--- a/config.toml
+++ b/config.toml
@@ -356,14 +356,14 @@ pluralizelisttitles = false
     # at 'exampleSite/data/features'.
     # For more information take a look at the README.
 
-[params.testimonials]
-    enable = true
-    # All testimonials are defined in their own files. You can find example items
-    # at 'exampleSite/data/testimonials'.
-    # For more information take a look at the README.
-    title = "Testimonials"
-    subtitle = "We have worked with many clients and we always like to hear they come out from the cooperation happy and satisfied. Have a look what our clients said about us."
-
+#[params.testimonials]
+#    enable = true
+#    # All testimonials are defined in their own files. You can find example items
+#    # at 'exampleSite/data/testimonials'.
+#    # For more information take a look at the README.
+#    title = "Testimonials"
+#    subtitle = "We have worked with many clients and we always like to hear they come out from the cooperation happy and satisfied. Have a look what our clients said about us."
+#
 [params.see_more]
     enable = true
     icon = "far fa-file-alt"
@@ -372,19 +372,19 @@ pluralizelisttitles = false
     link_url = "#"
     link_text = "Check other homepages"
 
-[params.clients]
-    enable = true
-    # All clients are defined in their own files. You can find example items
-    # at 'exampleSite/data/clients'.
-    # For more information take a look at the README.
-    title = "Our Clients"
-    subtitle = ""
+#[params.clients]
+#    enable = true
+#    # All clients are defined in their own files. You can find example items
+#    # at 'exampleSite/data/clients'.
+#    # For more information take a look at the README.
+#    title = "Our Clients"
+#    subtitle = ""
 
-[params.recent_posts]
-    enable = true
-    title = "From our blog"
-    subtitle = "Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo."
-    hide_summary = false
+#[params.recent_posts]
+#    enable = true
+#    title = "From our blog"
+#    subtitle = "Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo."
+#    hide_summary = false
 
 [params.footer.recent_posts]
     enable = true
