--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://westviewmakeawish.github.io/hugo-universal-theme/" # Configure URL. if using gh-pages https://github.com/<username>/hugo-universal-theme URL: https://<username>.github.io/hugo-universal-theme/
+baseurl = "https://westviewmakeawish.github.io/" # Configure URL. if using gh-pages https://github.com/<username>/hugo-universal-theme URL: https://<username>.github.io/hugo-universal-theme/
 title = "Make a Wish Westview"
 theme = "hugo-universal-theme"
 themesDir = "themes"
@@ -39,7 +39,7 @@ pluralizelisttitles = false
 [[menu.main]]
     name       = "Previous Make a Wishes"
     identifier = "menu.previous"
-    url        = "/img/template-homepage.png"
+    url        = "/images/xander.png"
     weight     = 3
 
 [[menu.main]]
