updated to fix typos

--- a/data/carousel/feb23.yaml
+++ b/data/carousel/feb23.yaml
@@ -2,9 +2,9 @@ weight: 2
 title: "Pack the Pit! Feb 23rd"
 description: >
   <ul class="list-style-none">
-    <li>Come join Boy's Varisty Basketball at 7PM</li>
+    <li>Join Boy's Varsity Basketball at 7 PM</li>
      <li>There will be a raffle for</li>
-     <li>free invisalign treatthe ment!</li>
+     <li>free Invisalign treatment!</li>
      <br>
      <li></li>
      <li>There will be more</li>
