--- a/data/carousel/feb16.yaml
+++ b/data/carousel/feb16.yaml
@@ -2,10 +2,10 @@ weight: 2
 title: "Pack the Pit! Feb 16th"
 description: >
   <ul class="list-style-none">
-    <li>Come join Girl's Varisty Basketball at 7PM</li>
+    <li>Join Girl's Varsity Basketball at 7 PM</li>
      <li>There will be a miracle minute</li>
      <li>at halftime for donations!</li>
-     <li>Halftime Half-Cout Challenge!</li>
+     <li>Halftime Half-Court Challenge!</li>
      <li>Make a shot to win PRIZES!</li>
    </ul>
 image: "/images/maw.png"
