updated the email addresses

--- a/config.toml
+++ b/config.toml
@@ -144,7 +144,7 @@ pluralizelisttitles = false
 [[menu.topbar]]
     weight = 5
     name = "Email"
-    url = "mailto:westviewwish@outlook.com"
+    url = "mailto:jessica_collyer@beaverton.k12.or.us"
     pre = "<i class='fas fa-2x fa-envelope'></i>"
 
 [params]
@@ -237,7 +237,7 @@ pluralizelisttitles = false
     enable = true
     text = """<p class="hidden-sm hidden-xs">Contact us at +1 503 292 2260</p>
       <p class="hidden-md hidden-lg"><a href="tel:+1 503 292 2260" data-animate-hover="pulse"><i class="fas fa-phone"></i></a>
-      <a href="mailto:hello@universal.com" data-animate-hover="pulse"><i class="fas fa-envelope"></i></a>
+      <a href="mailto:jessica_collyer@beaverton.k12.or.us" data-animate-hover="pulse"><i class="fas fa-envelope"></i></a>
       </p>
       """
 
