added some stuff to the spirt night carousel

--- a/data/carousel/snmar7.yaml
+++ b/data/carousel/snmar7.yaml
@@ -5,6 +5,10 @@ description: >
     <li>Join us at Chick-fil-A</li>
     <li>Thursday, March 7th, 5PM-8PM</li>
     <li>15% of sales will be donated!</li>
+
+    <li>Spin the Wheel!</li>
+
+    <li>Win Free Food!</li>
    </ul>
 image: "/images/snmar7.png"
 href: "/pit/feb23"
